# scm

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml  python-test.yml  test-n-publish.yml
foo/: mod1.py  mod2.py
tests/: test_bar.py  test_foo.py  test_mod1.py  test_mod2.py
