[project]
name = "sa-foo"
dynamic = ["version"]
dependencies = ["sa-bar>=0.3.0", "sa-baz>=0.3.0", "numpy"]

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=6.2", "wheel", "build"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "foo/version.py"
# default: guess-next-dev, alternatives: post-release, no-guess-dev
version_scheme = "release-branch-semver"
