[project]
name = "sa-foo"
dynamic = ["version"]
dependencies = ["sa-bar>=0.2.3", "sa-baz>=0.3.1", "numpy"]

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=6.2", "wheel", "build"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "foo/version.py"
# default: guess-next-dev, alternatives: post-release, no-guess-dev
version_scheme = "release-branch-semver"

[tool.conductor]
packagename_regex = "sa-[a-z]+"

[tool.conductor.dependency_graph]
sa-foo = ["sa-bar", "sa-baz"]
sa-bar = ["sa-foo", "sa-baz"]
sa-baz = []

[tool.conductor.repos]
sa-foo = "."
sa-bar = "../scm-dep"
sa-baz = "../scm-base"

# # default
# [tool.conductor.branches]
# sa-foo = "master"
# sa-bar = "master"
# sa-baz = "master"
